fix z-index

--- a/project/_src/blocks/blocks.less
+++ b/project/_src/blocks/blocks.less
@@ -11,5 +11,6 @@
 
 .block{
   //padding: var(--spacing-medium);
+  position: relative;
 }
 
